<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="260dp"
    tools:context=".LoginNewUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_continue"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/titletextCancelDialog2"
        android:textColor="@color/HeaderAlert_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtprivilegeinfo"
        android:layout_marginTop="26dp"
        android:textColor="@color/BodyAlert_text"
        android:layout_below="@+id/titletextCancelDialog2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/txtprivilegeinfo"
        android:id="@+id/llayTexts1"
        android:layout_marginTop="2dp">


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_article"
        android:textSize="19sp"
        android:id="@+id/txtprivilege"
        android:textColor="@color/BodyAlert_text"
        />

        <com.allegra.handyuvisa.utils.CustomizedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_terms"
        android:layout_marginLeft="6dp"
        android:textSize="19sp"
        android:id="@+id/txtTermsAndConditions"
        android:textColor="@color/HeaderAlert_text"
        app:font="@string/font_muli"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/llayTexts1"
        android:id="@+id/llayTexts2"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and_article"
            android:textSize="19sp"
            android:id="@+id/andArticle"
            android:textColor="@color/BodyAlert_text"
            />

        <com.allegra.handyuvisa.utils.CustomizedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_underscore"
            android:layout_marginLeft="6dp"
            android:textSize="19sp"
            android:id="@+id/txtPrivacyPolicy"
            android:textColor="@color/HeaderAlert_text"
            app:font="@string/font_muli"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llayTexts2"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <com.allegra.handyuvisa.utils.CustomizedTextView
            android:id="@+id/btnDecline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_transparent_orange"
            android:text="@string/decline_register"
            android:textColor="@color/SmallButtonWithBorder_border"
            app:font="@string/font_muli"
            android:gravity="center"
            android:textSize="16sp"/>           <!--  android:layout_marginBottom="20dp"-->

        <com.allegra.handyuvisa.utils.CustomizedTextView
            android:id="@+id/btnAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_magenta"
            android:text="@string/accept_register"
            android:gravity="center"
            android:textColor="@color/SmallButton_text"
            app:font="@string/font_muli"
            android:textSize="16sp"
            android:layout_gravity=""/>

    </LinearLayout>

</RelativeLayout>